--- a/views/novaAtividade.ejs
+++ b/views/novaAtividade.ejs
@@ -15,8 +15,7 @@
         <%- include('navPlan'); %>
 
         <main class="container mt-5">
-            <br><br><br>
-            <section>
+            <section class="fmresp">
                 <form id="form_ativ">
                     <div class="row py-2 align-items-center">
                         <div class="col-1 bg-white font-weight-bold text-right">Título</div>
@@ -73,7 +72,7 @@
                             <button 
                                 id="enviar" 
                                 style="width: 100%;"
-                                class="bg-dark text-white font-weight-bold border-0 p-2 rounded"
+                                class="bg-dark text-white font-weight-bold border-0 p-2 rounded btresp"
                             >
                                 Gravar
                             </button>
