--- a/views/novoObjetivo.ejs
+++ b/views/novoObjetivo.ejs
@@ -16,7 +16,7 @@
 
         <main class="container mt-5">
 
-            <section class="mgresp">
+            <section class="fmresp">
                 <form>
                     <div class="row py-2 align-items-center">
                         <div class="col-1 bg-white font-weight-bold text-right">Título</div>
@@ -67,7 +67,7 @@
                             <button 
                                 id="enviar" 
                                 style="width: 100%;"
-                                class="bg-dark text-white font-weight-bold border-0 p-2 rounded"
+                                class="bg-dark text-white font-weight-bold border-0 p-2 rounded btresp"
                             >
                                 Gravar
                             </button>
