--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -34,14 +34,14 @@
                         </a>                
                     </div>
                     <div class="col-4">
-                        <a href="/ativ" class="link">
+                        <a href="/ini" class="link">
                             <img src="../img/project-management-vector-free-icons-set--22.png" style="width: 9vw;" class="my-2">
                             <br>
                             <span class="legico">Criar Iniciativas</span>
                         </a>
                     </div>
                     <div class="col-4">
-                        <a href="/ativ" class="link"> 
+                        <a href="/obj" class="link"> 
                             <img src="../img/project-management-vector-free-icons-set--31.png" style="width: 9vw;" class="my-2">
                             <br>
                            <span class="legico">Criar Objetivos</span>
@@ -51,21 +51,21 @@
 
                 <div class="row text-center">
                     <div class="col-4">
-                        <a href="/ativ" class="link">
+                        <a href="/ativ/nova" class="link">
                             <img src="../img/business-vector-free-icon-set-39.png" style="width: 9vw;" class="my-2">
                             <br>
                             <span class="legico">Ver Atividades</span>
                         </a>                
                     </div>
                     <div class="col-4">
-                        <a href="/ativ" class="link">
+                        <a href="/ini/nova" class="link">
                             <img src="../img/strategy-vector-free-icons-set-21.png" style="width: 9vw;" class="my-2">
                             <br>
                             <span class="legico">Ver Iniciativas</span>
                         </a>
                     </div>
                     <div class="col-4">
-                        <a href="/ativ" class="link">
+                        <a href="/obj/nova" class="link">
                             <img src="../img/startup-vector-free-icon-set-30.png" style="width: 9vw;" class="my-2">
                             <br>
                             <span class="legico">Ver Objetivos</span>
