--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -18,7 +18,7 @@
     <body>
         <%- include('navPlan'); %>
         
-        <main class="container mt-5">
+        <main class="container">
 
             <div class="row mgresp" id="Ativ">
 
