--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -18,7 +18,7 @@
     <body>
         <%- include('navPlan'); %>
 
-        <main class="container mt-5">
+        <main class="container">
             <section>
             
                 <div class="row mgresp" id="Ini">
