--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bgBLK fixed-top text-white container-fluid" id="navbar">    
     <div class="container">
-        <div class="navbar-brand order-fisrt">
+        <div class="navbar-brand order-fisrt mr-1">
             <a href="/profile">
-                <img src="../img/ico_bk.png" width="75px" class="navlogo">
+                <img src="../img/ico_bk.png" width="100px" class="navlogo">
             </a>
         </div>
         
@@ -15,14 +15,19 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon text-white"></span>
         </button>
+
+        <div class="navbar-text text-white mr-2 ml-2">
+            &nbsp;
+        </div>
     
-        <div class="navbar-text text-white mr-5 ml-5">
+        <div class="navbar-text text-white mr-2 ml-2">
             <span class="h3 navtxt" id="tituloMain" style="font-weight: bold;"></span>
             <br>
             <span class="h3 navtxt" id="tituloSub"></span>
         </div>
     
-        <div class="collapse navbar-collapse order-last" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse order-last justify-content-end" id="navbarSupportedContent">
+            <!--BOTÃO OPÇÕES-->
             <div class="btn-group mr-2 mb-2 mt-2">
                 <button type="button" class="btn bgBLK text-white">
                     <p class="align-middle d-inline">
@@ -53,6 +58,7 @@
                     <a class="dropdown-item" href="/auth/logout">Sair</a>
                 </div>
             </div>
+            <!--BOTÃO VER-->
             <div class="btn-group mr-2 mb-2 mt-2">
                 <button type="button" class="btn bgBLK text-white">
                     <p class="align-middle d-inline">
@@ -73,6 +79,7 @@
                     <a class="dropdown-item" href="/obj/">Objetivos</a> 
                 </div>
             </div>
+            <!--CRIAR-->
             <div class="btn-group mr-2 mb-2 mt-2">
                 <button type="button" class="btn bgBLK text-white text-center">
                     <p class="align-middle d-inline">
