--- a/styles/hr.css
+++ b/styles/hr.css
@@ -27,12 +27,12 @@ h3 {
 }
 .bola {
     font-size: 1.25em;
-    display: flexbox;
     text-align: center;
-    height: 2em;
-    width: 2em;
-    line-height: 2em;
-    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    border-radius: 40px;
+    display: float;
 }
 
 .icobola {
