--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
+* {font-family: 'Open Sans', sans-serif;}
+
 body{
-    font-family: arial;
     color: #343a40;
     margin: 0;
     text-decoration: none;
