--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -10,6 +10,8 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" type="text/css" href="../styles/hr.css">
 <link rel="stylesheet" type="text/css" href="../styles/main.css">
 <link rel="stylesheet" type="text/css" href="../styles/login.css">
