--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <%- include('meta'); %>
-        <title>Página 1</title>
+        <title>Página Principal</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="shortcut icon" href="../img/ico_wh2x2.png">
