--- a/views/novoObjetivo.ejs
+++ b/views/novoObjetivo.ejs
@@ -9,6 +9,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
         <script src="../src/gravarNovoObjetivo.js" type="text/javascript"></script>
+        <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
 
     </head>
     <body>
