Ajustando funções nas listagens de atividades, iniciativas e objetivos, para que algumas das funções comuns entre objetivos, iniciativas e atividades fiquem cada uma em seu arquivo, tornando o código mais conciso. Importante também para o código ser mais profissional.

--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -11,6 +11,9 @@
         <script src="../src/botao_excluir.js" type="text/javascript"></script>
         <script src="../src/botao_concluir.js" type="text/javascript"></script>
         <script src="../src/botao_andamento.js" type="text/javascript"></script>
+        <script src="../src/emconstrucao.js" type="text/javascript"></script>
+        <script src="../src/expandirCard.js" type="text/javascript"></script>
+        <script src="../src/colorirStatus.js" type="text/javascript"></script>
 
         
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
