--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -13,6 +13,9 @@
         <script src="../src/botao_concluir.js" type="text/javascript"></script>
         <script src="../src/botao_andamento.js" type="text/javascript"></script>
         <script src="../src/botao_editar.js" type="text/javascript"></script>
+        <script src="../src/emconstrucao.js" type="text/javascript"></script>
+        <script src="../src/expandirCard.js" type="text/javascript"></script>
+        <script src="../src/colorirStatus.js" type="text/javascript"></script>
 
     </head>
     <body>
