--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -11,6 +11,9 @@
         <script src="../src/botao_excluir.js" type="text/javascript"></script>
         <script src="../src/botao_concluir.js" type="text/javascript"></script>
         <script src="../src/botao_andamento.js" type="text/javascript"></script>
+        <script src="../src/emconstrucao.js" type="text/javascript"></script>
+        <script src="../src/expandirCard.js" type="text/javascript"></script>
+        <script src="../src/colorirStatus.js" type="text/javascript"></script>
 
         
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
