--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -14,7 +14,7 @@
         <script src="../src/emconstrucao.js" type="text/javascript"></script>
         <script src="../src/expandirCard.js" type="text/javascript"></script>
         <script src="../src/colorirStatus.js" type="text/javascript"></script>
-
+        <script src="../src/stringDataBr.js" type="text/javascript"></script>
         
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
     </head>
