Correção de vários issues nas datas que estavam sendo exibidas e gravadas

--- a/views/novaAtividade.ejs
+++ b/views/novaAtividade.ejs
@@ -62,12 +62,12 @@
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Criação</div>
                             <div>
-                                <input type="datetime-local" id="ativDataCria" style="width: 100%;">
+                                <input type="datetime-local" required id="ativDataCria" style="width: 100%;">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Prazo</div>
-                            <input type="datetime-local" id="ativDataFim" style="width: 100%;"> 
+                            <input type="datetime-local" required id="ativDataFim" style="width: 100%;"> 
                         </div>
                         <div class="col-sm">
                             <button 
