--- a/views/novoObjetivo.ejs
+++ b/views/novoObjetivo.ejs
@@ -57,12 +57,12 @@
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Criação</div>
                             <div>
-                                <input type="datetime-local" id="objDataCria" style="width: 100%;">
+                                <input type="datetime-local" required id="objDataCria" style="width: 100%;">
                             </div>
                         </div>
                         <div class="col-sm">
                             <div class="py-2 bg-white font-weight-bold">Prazo</div>
-                            <input type="datetime-local" id="objDataFim" style="width: 100%;"> 
+                            <input type="datetime-local" required id="objDataFim" style="width: 100%;"> 
                         </div>
                         <div class="col-sm">
                             <button 
