Inclusão do módulo de Corridas

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -41,7 +41,7 @@
                     </div>
                     <a class="dropdown-item" href="/profile/">Planejamento</a>
                     <a class="dropdown-item disabled" href="/alim/">Alimentação</a>
-                    <a class="dropdown-item disabled" href="/run/">Corrida</a>
+                    <a class="dropdown-item" href="/run/">Corrida</a>
                     <a class="dropdown-item disabled" href="/gym/">Musculação</a>
                     <a class="dropdown-item disabled" href="#!">Sobre</a>
                     <a class="dropdown-item" href="/auth/logout">Sair</a>
@@ -64,7 +64,9 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="/ativ">Atividades</a>
                     <a class="dropdown-item" href="/ini/">Iniciativas</a>
-                    <a class="dropdown-item" href="/obj/">Objetivos</a> 
+                    <a class="dropdown-item" href="/obj/">Objetivos</a>
+                    <a class="dropdown-item" href="/run/lista">Lista de Corridas</a>
+                    <a class="dropdown-item" href="/run/best">Recordes de Corridas</a>
                 </div>
             </div>
             <div class="btn-group mr-2 mb-2 mt-2">
@@ -85,6 +87,7 @@
                     <a class="dropdown-item" href="/ativ/nova">Atividades</a>
                     <a class="dropdown-item" href="/ini/nova">Iniciativas</a>
                     <a class="dropdown-item" href="/obj/nova">Objetivos</a>
+                    <a class="dropdown-item" href="/run/nova">Registro de Corrida</a>
                 </div>
             </div> 
         </div>
