--- a/views/navPlan.ejs
+++ b/views/navPlan.ejs
@@ -51,7 +51,7 @@
                     </div>
                     <a class="dropdown-item" href="/profile/">Planejamento</a>
                     <a class="dropdown-item disabled" href="/alim/">Alimentação</a>
-                    <a class="dropdown-item disabled" href="/run/">Corrida</a>
+                    <a class="dropdown-item" href="/run/">Corrida</a>
                     <a class="dropdown-item disabled" href="/gym/">Musculação</a>
                     <a class="dropdown-item disabled" href="#!">Sobre</a>
                     <a class="dropdown-item disabled" href="#!">Atualizações do P_BSC</a>
