Inclusão do módulo de Corridas

--- a/views/runHome.ejs
+++ b/views/runHome.ejs
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <a href="/run/melhores" class="link"> 
+                        <a href="/run/best" class="link"> 
                             <img src="../img/runrecord.jpg" style="width: 8vw;" class="my-2">
                             <br>
                            <span class="legico">Melhores Tempos</span>
