Commit final da v1 do módulo de corridas, que está funcionando lindo! kkkk

--- a/views/recordesCorridas.ejs
+++ b/views/recordesCorridas.ejs
@@ -11,13 +11,11 @@
     </head>
     <body>
         <%- include('nav'); %>
-        
+        <br><br><br>
         <main class="container mt-5">
-            <br><br>
-            <h1> Detalhamento</h1>
-            <div class="row">
-                <div class="col">
-                    <div><h4>KM<br>&nbsp;</h4></div>
+            <div class="row " >
+                <div class="col-0 mr-2">
+                    <div><strong>Distância</strong><br><em>(Km)</em></div>
                     <div><strong>KM1&nbsp;</strong></div>
                     <div><strong>KM2&nbsp;</strong></div>
                     <div><strong>KM3&nbsp;</strong></div>
@@ -40,8 +38,8 @@
                     <div><strong>KM20&nbsp;</strong></div>
                     <div><strong>KM21&nbsp;</strong></div>
                 </div>
-                <div class="col">
-                    <div><h4>Recorde <br>(Segundos)</h4></div>
+                <div class="col-0 mr-2">
+                    <div><strong>Discreto</strong><br><em>(Seg.)</em></div>
                     <div id="SKm0" style="display: none;">0</div>
                     <div id="SKm1"></div>
                     <div id="SKm2"></div>
@@ -65,8 +63,8 @@
                     <div id="SKm20"></div>
                     <div id="SKm21"></div>
                 </div>
-                <div class="col">
-                    <div><h4>Recorde <br>(Discreto)</h4></div>
+                <div class="col-0 mr-2">
+                    <div><strong>Discreto</strong><br><em>(Min/Seg)</em></div>
                     <div id="RKm1"></div>
                     <div id="RKm2"></div>
                     <div id="RKm3"></div>
@@ -89,8 +87,8 @@
                     <div id="RKm20"></div>
                     <div id="RKm21"></div>
                 </div>
-                <div class="col">
-                    <div><h4>Recorde <br>(Acc - Seg)</h4></div>
+                <div class="col-0 mr-2">
+                    <div><strong>Calculado</strong><br><em>(Seg.)</em></div>
                     <div id="SDKm1"></div>
                     <div id="SDKm2"></div>
                     <div id="SDKm3"></div>
@@ -113,8 +111,8 @@
                     <div id="SDKm20"></div>
                     <div id="SDKm21"></div>
                 </div>
-                <div class="col">
-                    <div><h4>Recorde <br>(Acc - Min)</h4></div>
+                <div class="col-0 mr-2">
+                    <div><strong>Calculado</strong><br><em>(Min/Seg)</em></div>
                     <div id="SAKm1"></div>
                     <div id="SAKm2"></div>
                     <div id="SAKm3"></div>
@@ -136,6 +134,30 @@
                     <div id="SAKm19"></div>
                     <div id="SAKm20"></div>
                     <div id="SAKm21"></div>
+                </div>
+                <div class="col-0">
+                    <div><strong>Pace Calculado</strong><br><em>(Min/Seg)</em></div>
+                    <div id="PaceKm1"></div>
+                    <div id="PaceKm2"></div>
+                    <div id="PaceKm3"></div>
+                    <div id="PaceKm4"></div>
+                    <div id="PaceKm5"></div>
+                    <div id="PaceKm6"></div>
+                    <div id="PaceKm7"></div>
+                    <div id="PaceKm8"></div>
+                    <div id="PaceKm9"></div>
+                    <div id="PaceKm10"></div>
+                    <div id="PaceKm11"></div>
+                    <div id="PaceKm12"></div>
+                    <div id="PaceKm13"></div>
+                    <div id="PaceKm14"></div>
+                    <div id="PaceKm15"></div>
+                    <div id="PaceKm16"></div>
+                    <div id="PaceKm17"></div>
+                    <div id="PaceKm18"></div>
+                    <div id="PaceKm19"></div>
+                    <div id="PaceKm20"></div>
+                    <div id="PaceKm21"></div>
                 </div>
             </div>
         </main>
