--- a/views/recordesCorridas.ejs
+++ b/views/recordesCorridas.ejs
@@ -3,11 +3,11 @@
     <head>
         <title>Corridas: Recordes</title>
         <%- include('meta'); %>
-
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="../src/recordesCorridas.js"></script>
+        <script src="../src/transSegMin.js"></script>
     </head>
     <body>
         <%- include('nav'); %>
@@ -39,32 +39,7 @@
                     <div><strong>KM21&nbsp;</strong></div>
                 </div>
                 <div class="col-0 mr-2">
-                    <div><strong>Discreto</strong><br><em>(Seg.)</em></div>
-                    <div id="SKm0" style="display: none;">0</div>
-                    <div id="SKm1"></div>
-                    <div id="SKm2"></div>
-                    <div id="SKm3"></div>
-                    <div id="SKm4"></div>
-                    <div id="SKm5"></div>
-                    <div id="SKm6"></div>
-                    <div id="SKm7"></div>
-                    <div id="SKm8"></div>
-                    <div id="SKm9"></div>
-                    <div id="SKm10"></div>
-                    <div id="SKm11"></div>
-                    <div id="SKm12"></div>
-                    <div id="SKm13"></div>
-                    <div id="SKm14"></div>
-                    <div id="SKm15"></div>
-                    <div id="SKm16"></div>
-                    <div id="SKm17"></div>
-                    <div id="SKm18"></div>
-                    <div id="SKm19"></div>
-                    <div id="SKm20"></div>
-                    <div id="SKm21"></div>
-                </div>
-                <div class="col-0 mr-2">
-                    <div><strong>Discreto</strong><br><em>(Min/Seg)</em></div>
+                    <div><strong>Melhor Tempo no KM</strong><br><em>(Min/Seg)</em></div>
                     <div id="RKm1"></div>
                     <div id="RKm2"></div>
                     <div id="RKm3"></div>
@@ -88,31 +63,7 @@
                     <div id="RKm21"></div>
                 </div>
                 <div class="col-0 mr-2">
-                    <div><strong>Calculado</strong><br><em>(Seg.)</em></div>
-                    <div id="SDKm1"></div>
-                    <div id="SDKm2"></div>
-                    <div id="SDKm3"></div>
-                    <div id="SDKm4"></div>
-                    <div id="SDKm5"></div>
-                    <div id="SDKm6"></div>
-                    <div id="SDKm7"></div>
-                    <div id="SDKm8"></div>
-                    <div id="SDKm9"></div>
-                    <div id="SDKm10"></div>
-                    <div id="SDKm11"></div>
-                    <div id="SDKm12"></div>
-                    <div id="SDKm13"></div>
-                    <div id="SDKm14"></div>
-                    <div id="SDKm15"></div>
-                    <div id="SDKm16"></div>
-                    <div id="SDKm17"></div>
-                    <div id="SDKm18"></div>
-                    <div id="SDKm19"></div>
-                    <div id="SDKm20"></div>
-                    <div id="SDKm21"></div>
-                </div>
-                <div class="col-0 mr-2">
-                    <div><strong>Calculado</strong><br><em>(Min/Seg)</em></div>
+                    <div><strong>Melhor Tempo até o KM</strong><br><em>(Min/Seg)</em></div>
                     <div id="SAKm1"></div>
                     <div id="SAKm2"></div>
                     <div id="SAKm3"></div>
@@ -134,30 +85,6 @@
                     <div id="SAKm19"></div>
                     <div id="SAKm20"></div>
                     <div id="SAKm21"></div>
-                </div>
-                <div class="col-0">
-                    <div><strong>Pace Calculado</strong><br><em>(Min/Seg)</em></div>
-                    <div id="PaceKm1"></div>
-                    <div id="PaceKm2"></div>
-                    <div id="PaceKm3"></div>
-                    <div id="PaceKm4"></div>
-                    <div id="PaceKm5"></div>
-                    <div id="PaceKm6"></div>
-                    <div id="PaceKm7"></div>
-                    <div id="PaceKm8"></div>
-                    <div id="PaceKm9"></div>
-                    <div id="PaceKm10"></div>
-                    <div id="PaceKm11"></div>
-                    <div id="PaceKm12"></div>
-                    <div id="PaceKm13"></div>
-                    <div id="PaceKm14"></div>
-                    <div id="PaceKm15"></div>
-                    <div id="PaceKm16"></div>
-                    <div id="PaceKm17"></div>
-                    <div id="PaceKm18"></div>
-                    <div id="PaceKm19"></div>
-                    <div id="PaceKm20"></div>
-                    <div id="PaceKm21"></div>
                 </div>
             </div>
         </main>
