--- a/views/corridas.ejs
+++ b/views/corridas.ejs
@@ -10,6 +10,7 @@
         <script src="../src/todasCorridas.js" type="text/javascript"></script>        
         <script src="../src/botao_excluir.js" type="text/javascript"></script>
         <script src="../src/expandirCard.js" type="text/javascript"></script>
+        <script src="../src/transSegMin.js" type="text/javascript"></script>
 
 
     </head>
